--- a/src/watchman-homebrew/devcontainer-feature.json
+++ b/src/watchman-homebrew/devcontainer-feature.json
@@ -1,8 +1,8 @@
 {
   "id": "watchman-homebrew",
-  "version": "1.0.0",
+  "version": "1.0.19",
   "name": "watchman (via Homebrew)",
-  "documentationURL": "http://github.com/devcontainers-extra/features/tree/main/src/curl-homebrew",
+  "documentationURL": "https://github.com/Alistair1231/features/tree/main/src/watchman-homebrew",
   "description": "Watches files and records, or triggers actions, when they change.",
   "options": {
     "version": {
